"Fixing images on mobile test"

--- a/index.scss
+++ b/index.scss
@@ -636,6 +636,7 @@ main {
       }
       img {
         height: 80vh;
+        width: auto;
       }
     }
     h4 {
@@ -656,6 +657,7 @@ main {
       }
       img {
         height: 70vh;
+        width: auto;
       }
     }
     h4 {
